--- a/build.gradle
+++ b/build.gradle
@@ -7,15 +7,15 @@ buildscript {
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+		classpath("io.swagger.core.v3:swagger-gradle-plugin:2.0.5")
 	}
-
 }
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
-
+apply plugin: "io.swagger.core.v3.swagger-gradle-plugin"
 
 group = 'br.com.enjoei2'
 version = '0.0.1-SNAPSHOT'
@@ -25,8 +25,8 @@ repositories {
 	mavenCentral()
 }
 
-
 dependencies {
+	implementation('org.springframework.boot:spring-boot-starter-mail')
 	implementation('org.springframework.boot:spring-boot-starter-security')
 	implementation('org.springframework.boot:spring-boot-starter-web')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
