--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,6 @@ buildscript {
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-		classpath("io.swagger.core.v3:swagger-gradle-plugin:2.0.5")
 	}
 }
 
@@ -15,7 +14,6 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
-apply plugin: "io.swagger.core.v3.swagger-gradle-plugin"
 
 group = 'br.com.enjoei2'
 version = '0.0.1-SNAPSHOT'
@@ -31,5 +29,5 @@ dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-web')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	testImplementation('org.springframework.security:spring-security-test')
+	compile("org.postgresql:postgresql:9.4-1200-jdbc41") 
 }
-
