--- a/build.gradle
+++ b/build.gradle
@@ -26,11 +26,12 @@ repositories {
 
 dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-web')
-	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	runtimeOnly('org.postgresql:postgresql')
 	compile("io.springfox:springfox-swagger2:2.0.2")
 	compile("io.springfox:springfox-swagger-ui:2.0.2")
+	compile group: 'org.postgresql', name: 'postgresql', version: '42.2.5'
+	compile group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4'
 }
 
 
