--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,8 @@ dependencies {
 	compile("io.springfox:springfox-swagger-ui:2.0.2")
 	compile group: 'org.postgresql', name: 'postgresql', version: '42.2.5'
 	compile group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4'
+	compile group: 'org.eclipse.persistence', name: 'javax.persistence', version: '2.2.1'
+	compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.1.1.RELEASE'
 }
 
 
