--- a/build.gradle
+++ b/build.gradle
@@ -27,13 +27,16 @@ repositories {
 dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-web')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
-	runtimeOnly('org.postgresql:postgresql')
 	compile("io.springfox:springfox-swagger2:2.0.2")
 	compile("io.springfox:springfox-swagger-ui:2.0.2")
-	compile group: 'org.postgresql', name: 'postgresql', version: '42.2.5'
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-undertow', version: '2.0.6.RELEASE'	
+	compile group: 'postgresql', name: 'postgresql', version: '9.1-901-1.jdbc4'
 	compile group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4'
 	compile group: 'org.eclipse.persistence', name: 'javax.persistence', version: '2.2.1'
-	compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.1.1.RELEASE'
+	//compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.0.6.RELEASE'
 }
-
+configurations {
+  compile.exclude module: 'spring-boot-starter-tomcat'
+  compile.exclude group: 'org.apache.tomcat'
+}
 
