--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ repositories {
 
 dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-web')
+	implementation('org.springframework.boot:spring-boot-starter-mail')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	compile("io.springfox:springfox-swagger2:2.0.2")
 	compile("io.springfox:springfox-swagger-ui:2.0.2")
