--- a/build.gradle
+++ b/build.gradle
@@ -30,14 +30,10 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	compile("io.springfox:springfox-swagger2:2.0.2")
 	compile("io.springfox:springfox-swagger-ui:2.0.2")
-	compile group: 'org.springframework.boot', name: 'spring-boot-starter-undertow', version: '2.0.6.RELEASE'	
-	compile group: 'postgresql', name: 'postgresql', version: '9.1-901-1.jdbc4'
-	compile group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4'
-	compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-rest', version: '2.0.6.RELEASE'
-	compile group: 'org.hibernate', name: 'hibernate-core', version: '5.3.7.Final'
+	runtime('org.postgresql:postgresql')
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.0.6.RELEASE'
 }
-configurations {
-  compile.exclude module: 'spring-boot-starter-tomcat'
-  compile.exclude group: 'org.apache.tomcat'
+configurations{
 }
+
 
