--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,10 @@ dependencies {
 	compile("io.springfox:springfox-swagger-ui:2.0.2")
 	runtime('org.postgresql:postgresql')
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.0.6.RELEASE'
+	compile group: 'com.fasterxml', name: 'classmate', version: '1.1.0'
 }
 configurations{
+
 }
 
 
