--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,8 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=false
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+#Usado para criar as tabelas no bd
+#spring.jpa.hibernate.ddl-auto=create
 
 
 
