--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=false
 spring.jpa.generate-ddl=true
 #Usado para criar as tabelas no bd
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create
 
 
 
