fix/ email agora fica em system env

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #spring-boot-starter-mail properties
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=enjoei2.assistencia@gmail.com
-spring.mail.password=perfil-enjoei
+spring.mail.username=${EMAIL}
+spring.mail.password=${EMAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.ssl.trust= smtp.gmail.com
 spring.mail.properties.mail.smtp.starttls.enable=true
